# GoodbyeSoftwareSec

2/: a.js  b.js
3/: CMakeLists.txt  ddos.c  duplicate.cpp  getAddress.c
4/: .gitignore  CMakeLists.txt  FindBOTAN.cmake  miniAntiVirus.cpp
